[REST Compatible API] Route refactoring (#69573)
Related to #51816

Makes `Route`s  `RestApiVersion` -aware (and `RestHandler`s `RestApiVersion` -agnostic). Refactors
how `Route`s are constructed in the case of deprecation or replacement of routes.