@@ -7,6 +7,7 @@
 package org.elasticsearch.xpack.security.rest.action.realm;
 
 import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.common.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.RestRequest;
@@ -16,7 +17,6 @@ import org.elasticsearch.xpack.core.security.client.SecurityClient;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
@@ -29,15 +29,9 @@ public final class RestClearRealmCacheAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
-            new ReplacedRoute(POST, "/_security/realm/{realms}/_clear_cache",
-                POST, "/_xpack/security/realm/{realms}/_clear_cache")
+        return org.elasticsearch.common.collect.List.of(
+            Route.builder(POST, "/_security/realm/{realms}/_clear_cache")
+                .replaces(POST, "/_xpack/security/realm/{realms}/_clear_cache", RestApiVersion.V_7).build()
         );
     }
 
