@@ -8,6 +8,7 @@ package org.elasticsearch.xpack.security.rest.action.role;
 
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
@@ -22,8 +23,6 @@ import org.elasticsearch.xpack.core.security.client.SecurityClient;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
@@ -39,16 +38,12 @@ public class RestGetRolesAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
-            new ReplacedRoute(GET, "/_security/role/", GET, "/_xpack/security/role/"),
-            new ReplacedRoute(GET, "/_security/role/{name}", GET, "/_xpack/security/role/{name}")
-        ));
+        return org.elasticsearch.common.collect.List.of(
+            Route.builder(GET, "/_security/role/")
+                .replaces(GET, "/_xpack/security/role/", RestApiVersion.V_7).build(),
+            Route.builder(GET, "/_security/role/{name}")
+                .replaces(GET, "/_xpack/security/role/{name}", RestApiVersion.V_7).build()
+        );
     }
 
     @Override
